ofbiz merge: db9b477ae3... from trunk (major service java bug fixes)
11 commits:
"Improved: Fixing defects reported by FindBugs, package
org.apache.ofbiz.service.* (OFBIZ-9638)"

Ofbiz-Commit: db9b477ae3b794051ea6876026207dca5b32436d,
69fbf027f1ae8b75151461ac765c9dc3627c054d,
76e90afe789da1258694a06d78d104ea077639dd,
46e9291c3ff5adfea7fb8d19f3d071cec9a45656,
c86206a20c4e8df44f92f5ccdd0591736e053a53,
0b98aa922d63b6604dff099ffddd48d3f7ade4eb,
4c59653927219f204386b1183ee448c130fd0e11,
6ce7dc5d84cc51d0adf2a41a3372bf5837642e7c,
57f102566e8b482983b15dbd21ac10e78b16a049,
1bce727e3f29a99bbeb9c98250e220c8729cd4ac,
b97b9cb556e41da127acba33b09d604179846463
Ofbiz-Repo: https://github.com/apache/ofbiz-framework.git
Ofbiz-Branch: trunk

Refs https://gitlab.ilscipio.com/scipio-dev/dev/scipioce-dev/issues/632